try to autocomplete the comboboxes